# game_playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  grpc.cmake
.github/workflows/: build_snake.yml  build_snake_cmake.yml  codeql.yml
sln/GameClient/: Game.cpp  GameClient.vcxproj  GameDefinitions.h
sln/GameClient/Engine/: Direct2dEngine.h
sln/GameClient/GameObjects/: Food.h  PlayArea.cpp  Snake.cpp
sln/GameClient/State/: GameStateBase.h  GameStateMachine.h  Playing.h
src/: .editorconfig  Cube.sln  Cube.sln.DotSettings  Directory.Build.Props  Snake.sln  Snake.sln.DotSettings
src/2DEngine/: 2DEngine.vcxproj  2DEngine.vcxproj.filters  CMakeLists.txt  sourcelist.cmake
src/2DEngine/Engine/: Colour.h  EngineFactory.cpp  EngineFactory.h  IDrawable.h  Size.h
src/2DEngine/Engine/Direct2D/: Direct2dColour.h  Direct2dEngine.cpp  Direct2dEngine.h
src/2DEngine/Utility/: Direct2dUtility.h
src/2DEngine/include/EngineLib/: Coordinate2d.h  EngineFactory.h  IEngine.h
src/2DEngine/include/EngineLib/Direct2D/: Direct2dEngine.h
src/2DEngine/src/: Macros.h
src/2DEngine/src/Engine/: EngineFactory.cpp
src/2DEngine/src/Engine/Direct2D/: Direct2dColour.cpp  Direct2dColour.h  Direct2dEngine.cpp
src/2DEngine/src/Utility/: Direct2dUtility.cpp  Direct2dUtility.h
src/CubeApp/: App.xaml  App.xaml.cs  CubeApp.csproj  MainWindow.xaml  MainWindow.xaml.cs  MainWindow_Test1.xaml  MainWindow_Test1.xaml.cs
src/CubeApp/Converters/: ControlSizeToFontSizeConverter.cs
src/CubeApp/GenericHelpers/: IsDebug.cs
src/CubeApp/UserControls/: ModularRectangle.xaml  ModularRectangle.xaml.cs
src/CubeApp/ViewModel/: MainWindowViewModel.cs  ViewModelBase.cs
src/GameClient/: CMakeLists.txt  CollisionDetector.h  Direct2dEngine.cpp  Direct2dEngine.h  Direct2dUtility.cpp  Direct2dUtility.h  Doxyfile  Engine.cpp  Engine.h  Food.cpp  Food.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameClient.rc  GameClient.vcxproj  GameClient.vcxproj.filters  GameDefinitions.h  GameOver.cpp  GameOver.h  GameStateBase.cpp  GameStateBase.h  GameStateMachine.cpp  GameStateMachine.h  GameStateType.h  ICollidable.h  IDrawable.h  IEngine.h  IGameState.h  Keys.h  Macros.h  PlayArea.cpp  PlayArea.h  Playing.cpp  Playing.h  Snake.cpp  Snake.h  WinMain.cpp  Window.cpp  (+2 more)
src/GameClient/Engine/: Colour.h  Coordinate2d.h  Direct2dEngine.cpp  IDrawable.h  IEngine.h  IRender.h  IRenderTarget.h  Size.h
src/GameClient/Engine/Direct2D/: Direct2dColour.cpp  Direct2dColour.h  Direct2dEngine.cpp  Direct2dEngine.h  Direct2dRenderTarget.cpp  Direct2dRenderTarget.h
src/GameClient/GameObjects/: Food.cpp  Food.h  PlayArea.cpp  PlayArea.h  Snake.cpp  Snake.h  StartMenu.cpp  StartMenu.h
src/GameClient/GameObjects/Collision/: CollidableBase.cpp  CollidableBase.h  CollisionDetector.cpp  CollisionDetector.h  ICollidable.h
src/GameClient/GameObjects/UIControls/: Button.cpp  Button.h
src/GameClient/Input/: Input.h  VirtualKeyCodes.h
src/GameClient/Resource/: GameClient.rc  resource.h
src/GameClient/State/: GameOver.cpp  GameOver.h  GameOverState.cpp  GameOverState.h  GameStateBase.cpp  GameStateBase.h  GameStateMachine.cpp  GameStateMachine.h  GameStateType.h  GameStates.h  IGameState.h  IStateMachine.h  Playing.cpp  Playing.h  StartMenuState.cpp  StartMenuState.h
src/GameClient/UI/: Score.h  Scoreboard.cpp  Scoreboard.h  StartMenu.cpp  StartMenu.h
src/GameClient/UI/Controls/: Button.cpp  Button.h  Label.cpp  Label.h
src/GameClient/Utility/: Direct2dUtility.cpp  Direct2dUtility.h
src/GameClient/src/: Game.cpp  Game.h  Macros.h  Window.cpp  Window.h
src/GameClient/src/GameObjects/: Food.h  GameObjects.h  PlayArea.h  Snake.cpp  Snake.h
src/GameClient/src/GameObjects/Collision/: CollisionDetector.h
src/GameClient/src/Input/: Input.h
src/GameClient/src/Resource/: GameClient.rc
src/GameClient/src/State/: GameOverState.h  GameStateMachine.cpp  IGameState.h  IStateMachine.h  Playing.h
src/GameClient/src/UI/: Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h  StartMenu.cpp  StartMenu.h
src/GameClient/src/UI/Controls/: Button.cpp  Button.h  Label.h
src/GameClient/src/Web.Client/: Client.cpp  Client.h
src/Protos/: greet.proto  grpc.cmake  score.proto
src/Service/: Game.Service.sln  GameService.sln
src/Service/Score.Service/: Program.cs  Score.Service.csproj
src/Service/Score.Service/Properties/: launchSettings.json
src/Service/Score.Service/Properties/ServiceDependencies/snake-game-service - Zip Deploy/: profile.arm.json
src/Service/Score.Service/Services/: GreeterService.cs  ScoreService.cs
src/Service/ScoreService/: Program.cs  ScoreService.csproj  appsettings.json
src/Service/ScoreService/Models/: UserScore.cs
src/Service/ScoreService/Repositories/: IUserScoreRepository.cs  UserScoreDummyRepository.cs  UserScoreFileSystemRepository.cs
src/Service/ScoreService/Services/: GreeterService.cs  ScoreService.cs
